Regions;
Closes #11; Closes #18; closes #2;
